fixed input issue that keeps text inside card without it making it larger and affecting the other car cards. Added width, height and overflow

--- a/quiz.css
+++ b/quiz.css
@@ -71,5 +71,8 @@ h2 {
 
 .carDescription {
   color:#006A00;
+  overflow: auto;
+  width: 100%;
+  height: 125px;
 }
 
